add navigation from landing page

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
     <script>
         function handleGetStarted() {
-            alert('🎉 Thanks for your interest! Our team will be in touch soon to help set up your streamlined lunch ordering system.');
+            window.location.href = 'http://localhost:5174/';
         }
 
         // Smooth scrolling for navigation links
